--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -20,3 +20,17 @@
     transform: translateX(30px);
     transition: all 0.5s;
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fade-in {
+    animation: fadeIn 0.5s ease-in-out;
+}
