--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ body {
     border-radius: 16px;
     box-shadow: 0 2px 8px 0 rgba(16, 24, 40, 0.08);
     padding: 32px 24px 24px 24px;
-    min-height: 80vh;
+    min-height: calc(100vh - 84px);
 }
 
 /* Table Styles */
